--- a/src/App.css
+++ b/src/App.css
@@ -65,3 +65,10 @@
   display: inline-flex;
   width: 70%;
 }
+
+.taskDone {
+  background-color: #52c15f;
+  margin: 10px;
+  padding: 10px;
+  width: 20%;
+}
